# go2_ws

./: README.md  doff.pcd  test.pcd
src/FAST_LIO/config/: mid360.yaml
src/lidar_localization_ros2/launch/: lidar_localization.launch.py
src/lidar_localization_ros2/param/: localization.yaml
src/lidar_localization_ros2/src/: lidar_localization_component.cpp
src/livox_ros_driver2/config/: MID360_config.json
src/localization_kha/: CMakeLists.txt  package.xml
src/localization_kha/config/: mid360.yaml
src/localization_kha/launch/: go2_localization.launch.py
src/localization_kha/src/: icp_localizer.cpp
src/point_lio_ros2/config/: mid360.yaml
